# CS707-G5-project

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  sbatchTemplatePython.sh
archive/data/qa_output/: 0102_qa.json  0104_qa.json  0107_qa.json  0108_qa.json  0109_qa.json  0111_qa.json  0115_qa.json  0116_qa.json  0119_qa.json  0120_qa.json  0122_qa.json  0124_qa.json  0201_qa.json  0205_qa.json  0207_qa.json  0208_qa.json  0210_qa.json  0214_qa.json  0215_qa.json  0216_qa.json  0224_qa.json  0301_qa.json  0303_qa.json  0304_qa.json  0305_qa.json  0306_qa.json  0307_qa.json  0308_qa.json  0309_qa.json  0310_qa.json  0311_qa.json  0313_qa.json  0314_qa.json  0316_qa.json  0318_qa.json  0319_qa.json  0321_qa.json  0322_qa.json  0323_qa.json  0324_qa.json  (+1 more)
archive/data/subtitles_with_events/: 0102_with_events.json  0103_with_events.json  0104_with_events.json  0105_with_events.json  0108_with_events.json  0109_with_events.json  0110_with_events.json  0111_with_events.json  0112_with_events.json  0115_with_events.json  0117_with_events.json  0118_with_events.json  0119_with_events.json  0120_with_events.json  0122_with_events.json  0123_with_events.json  0201_with_events.json  0202_with_events.json  0205_with_events.json  0207_with_events.json  0209_with_events.json  0210_with_events.json  0211_with_events.json  0215_with_events.json  0216_with_events.json  0224_with_events.json  0301_with_events.json  0303_with_events.json  0304_with_events.json  0305_with_events.json  0307_with_events.json  0308_with_events.json  0311_with_events.json  0315_with_events.json  0320_with_events.json  0323_with_events.json  0324_with_events.json  0325_with_events.json  batch_info_20251106_072916.json  batch_metadata_20251106_072916.json
archive/main/: parse_subtitles_annotate.ipynb  run_vanilla_inference.py
archive/main/data/: download.py
archive/main/models/: config.toml  inference.py  model.py
archive/repo/: __init__.py  requirements.txt  run_goldfish_inference.py
archive/repo/data/: preprocessing.py  processing.py
archive/repo/goldfish/: config.toml  goldfish_get_json.py  index.py  inference_utils_batch.py
archive/repo/models/: __init__.py  evaluator.py  inference.py
archive/src/: pipelines.py
archive/src/data/: __init__.py  add_events.py
data/annotated_tuples/: 0101.json  0109.json  0117.json
data/edersoncorbari_subtitles_json/: 0101.json
data/output_with_events/: 0101_with_events.json  0118_with_events.json  0121_with_events.json  0124_with_events.json
data/qa_output/: 0101_qa.json  0103_qa.json  0105_qa.json  0106_qa.json  0110_qa.json  0112_qa.json  0113_qa.json  0114_qa.json  0118_qa.json  0121_qa.json  0123_qa.json  0202_qa.json  0203_qa.json  0209_qa.json  0211_qa.json  0312_qa.json  0315_qa.json  0317_qa.json  0320_qa.json
data/subtitles_with_events/: 0106_with_events.json  0107_with_events.json  0113_with_events.json  0114_with_events.json  0121_with_events.json  0124_with_events.json  0203_with_events.json  0208_with_events.json  0214_with_events.json  0306_with_events.json  0309_with_events.json  0310_with_events.json  0312_with_events.json  0313_with_events.json  0314_with_events.json  0316_with_events.json  0317_with_events.json  0318_with_events.json  0319_with_events.json  0321_with_events.json  0322_with_events.json  batch_info_20251106_072916.json  batch_requests_20251106_072916.jsonl
main/: eval  run_vanilla_inference.py
main/data/: generate_single_cue_temporal.py  temporal_qa.json
main/data/episodic_qa/: 0102_qa.json  0105_qa.json  0107_qa.json  0111_qa.json  0120_qa.json
main/data/episodic_tuples/: 0102_with_events.json  0114_with_events.json  0115_with_events.json  0119_with_events.json
main/models/: inference.py  model.py
main/results_vanilla/: clean_results.ipynb
main/subtitles/edersoncorbari_subtitles_html/: 0122.html  0904.html  0914.html
repo/: README.md  run_goldfish_inference.py  run_vanilla_inference.py  split_video.py
repo/data/: parse_subtitles_annotate.py
repo/data/edersoncorbari_subtitles_html/: 0819.html
repo/goldfish/: goldfish_lv_json.py  model.py  run_goldfish_inference.py  split_vtt_for_clips.py
repo/models/: config.toml  model.py
scripts/: download.py  evaluation.py  goldfish_inference.py  preprocess.py  process.py  vanilla_inference.py
scripts/goldfish/: goldfish_get_json.py  goldfish_lv_json.py  index.py  inference_utils_batch.py  model.py  paths.py  split_long_video_in_parallel.py  split_vtt_for_clips.py
src/: pipelines.py
src/data/: add_events.py  extract.py  generate_qa.py  preprocessing.py  processing.py
src/models/: download.py
src_old/: mllm_test.ipynb  pipelines.py  split_video.py
src_old/models/: evaluator.py  inference.py  mllm_qwenVL_25.ipynb  mllm_video_llava.ipynb  model.py
src_old/subtitles/: parse_subtitles.ipynb
(+513 files in other folders)
