[project]
name = "cs707-g5-project"
version = "0.1.0"
description = "CS707 Group 5 Project Codes"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "cmake>=4.1.0",
    "ffmpeg-python>=0.2.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "poethepoet>=0.34.0",
    "python-dotenv>=1.1.1",
    "moviepy >= 2.0.0",
    "litellm>=1.79.1",
    "tqdm>=4.66.0",
]

[tool.poe.tasks]
events-generation-pipeline = { script = "src.pipelines:events_generation", help = "Starts the process to add events to the annotated subtitles" }
qa-generation-pipeline = { script = "src.pipelines:qa_generation", help = "Starts the process to generate qa samples form the events" }


[tool.poe.tasks.checks]
sequence = [
  { cmd = "uvx ruff check src --fix" },
  { cmd = "uvx black src" },
  { cmd = "uvx ty check src" }
]
help = "Run linting, formatting, and static type checking"

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20250913",
]
